--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,133 @@
  *= require_tree .
  *= require_self
  */
+
+/* Style Reset (Eric Meyer) */
+
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Application-wide Styles */
+
+.title {
+  font-family: 'Titillium Web', sans-serif;
+  font-size: 32px;
+  text-align: center;
+  margin: 10px 10px 10px;
+}
+
+body {
+    font-family: 'Raleway', sans-serif, monospace;
+    width: 100%;
+    font-size: 16px;
+    text-align: center;
+}
+
+h5 {
+    font-size: 1.64em;
+    line-height: 110%;
+}
+
+em {
+    font-size: 1em;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+canvas {
+    position: fixed;
+    top: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100vh;
+    margin-left: 0em;
+}
+
+/* Header + Navbar/Sign In */
+
+.header {
+  font-family: 'Titillium Web', sans-serif;
+  font-size: 26px;
+  text-decoration: none;
+  text-align: left;
+}
+
+/* Service Box Grid */
+
+.box {
+    margin: .5rem .5rem 1rem .5rem;
+    padding: .5rem 1rem 1rem 1rem;
+    border-radius: 2px;
+    text-align: center;
+    font-size: 12em;
+    font-family: 'Lato', sans-serif;
+    max-width: 27%;
+}
+
+.box:hover {
+    position: relative;
+    top: -5px;
+    left: -5px;
+    box-shadow: 5px 5px 5px #969696;
+}
+
+.squares-services {
+    display: flex;
+    display: -webkit-flexbox;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+        flex-direction: row;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding: 10px;
+}
